<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" android:focusableInTouchMode="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_login"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                <io.igrant.igrant_org_sdk.CustomViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:text="@string/txt_login_existing_user_login"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="normal"/>

                <io.igrant.igrant_org_sdk.CustomViews.LoginEditText
                        android:id="@+id/letEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="50dp"
                        android:hint="@string/txt_login_email"
                        android:textColorHint="@color/lightBlue"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/text_size_medium"/>

                <io.igrant.igrant_org_sdk.CustomViews.LoginEditText
                        android:id="@+id/letPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:hint="@string/txt_login_password"
                        android:textColorHint="@color/lightBlue"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/text_size_medium"/>

                <io.igrant.igrant_org_sdk.CustomViews.CustomTextView
                        android:id="@+id/tvRevealPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:text="@string/txt_login_show_password"
                        android:textColor="@color/lightBlue"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="normal"
                        android:visibility="invisible"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal">

                    <io.igrant.igrant_org_sdk.CustomViews.CustomTextView
                            android:id="@+id/tvForgotPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:text="@string/txt_login_forgot_password"
                            android:textColor="@color/lightBlue"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="normal"
                            android:visibility="invisible"/>

                    <io.igrant.igrant_org_sdk.CustomViews.CustomTextView
                            android:id="@+id/btnLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/btn_login"
                            android:paddingEnd="30dp"
                            android:paddingStart="30dp"
                            android:gravity="center"
                            android:text="@string/txt_login"
                            android:textColor="@color/txt_fadedwhite"
                            android:textAllCaps="false"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/llProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:clickable="true">

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
