<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include
                layout="@layout/toolbar_home"/>

        <LinearLayout
                android:id="@+id/llFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">


            <LinearLayout
                    android:id="@+id/llViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_view_consenthistory"/>

                <io.igrant.igrant_org_sdk.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"

                        android:text="@string/txt_view_all"
                        android:textColor="@color/txt_color"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/llSortByOrg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unfold_more"/>

                <io.igrant.igrant_org_sdk.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"

                        android:text="@string/txt_sort_by_organization"
                        android:textColor="@color/txt_color"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/llSortByDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar_today"/>

                <io.igrant.igrant_org_sdk.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"

                        android:text="@string/txt_sort_by_date"
                        android:textColor="@color/txt_color"/>
            </LinearLayout>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/txt_color"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvConsentHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>

        <io.igrant.igrant_org_sdk.customViews.CustomTextView
                android:id="@+id/tvEmptyMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_empty_consent_history"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/text_size_large"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/llProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
